kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-api-service
  labels:
    app: fast-api
spec:
  selector:
    app: fast-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
