kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-api-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: fast-api-deployment
                port:
                  number: 8080
          - path: /items/
            pathType: Prefix
            backend:
              service:
                name: fast-api-service
                port:
                  number: 8080
